--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 				
 
 				<div class="container">
-						<div class="item-blue item"><a href="#">St. Louis Blues</a></div>
-						<div class="item-nhl item"><a href="#">NHL</div>
-						<div class="item-blackhawks item"><a href="#">Chicago Blackhawks</div>
+						<div class="item-blue item"><a href="https://www.nhl.com/blues">St. Louis Blues</a></div>
+						<div class="item-nhl item"><a href="https://www.nhl.com/">NHL</div>
+						<div class="item-blackhawks item"><a href="http://blackhawks.nhl.com/">Chicago Blackhawks</div>
 				</div>
 			</h1>
 		</header>
@@ -31,6 +31,7 @@
 		<section class="blues">
 				<h2><a href="https://www.nhl.com/blues" target="_blank">St. Louis Blues</a></h2>
 				<a href="https://www.nhl.com/blues" target="_blank"><img class="img-blues" src="Blues circle.jpg"></a>
+				<p></p>
 			
 				<li><a href="https://www.nhl.com/blues/schedule/2021-10-01/CT" target="_blank">2021-2022 Schedule</a></li>
 				<li><a href="https://www.nhl.com/blues/tickets" target="_blank">Tickets</li>
@@ -42,6 +43,7 @@
 		<section class="blackhawks">
 				<h2><a href="http://blackhawks.nhl.com/" target="_blank">Chicago Blackhawks</a></h2>
 				<a href="http://blackhawks.nhl.com/" target="_blank"><img class="img-blackhawks" src="Blackhawks circle.jpeg"></a>
+				<p></p>
 				
 				<li><a href="https://www.nhl.com/blackhawks/schedule/2021-10-01/CT" target="_blank">2021-2022 Schedule</li>
 				<li><a href="https://www.nhl.com/blackhawks/tickets" target="-blank">Tickets</li>
