--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 	<head>
 	<title>NHL Rivalries</title>
 	<link rel="stylesheet" type="text/css" href="style.css" />
+
 	</head>
 
 	<body>
 
 		<div class="nhl">		
-				
+			<img class="nhl-background" src="blues vs hawks.jpg">	
 			<a href="https://www.nhl.com/" target="_blank"><img class="img-nhl" src="NHL-Logo.png" alt="NHL Logo"></a>
 		</div>	
 		
