--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<body>
 
 		<div class="nhl">		
-			<img class="nhl-background" src="blues vs hawks.jpg">	
+			<div class="nhl-background"></div>
 			<a href="https://www.nhl.com/" target="_blank"><img class="img-nhl" src="NHL-Logo.png" alt="NHL Logo"></a>
 		</div>	
 		
