--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				
 
 				<div class="container">
-						<div class="item-blue item"><a href="https://www.nhl.com/blues">St. Louis Blues</a></div>
+						<div class="item-blue item"><a href="https://www.nhl.com/blues">St. Louis Blues</a> lol</div>
 						<div class="item-nhl item"><a href="https://www.nhl.com/">NHL</div>
 						<div class="item-blackhawks item"><a href="http://blackhawks.nhl.com/">Chicago Blackhawks</div></a>
 				</div>
