--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		<h2>
 			<p class="nhl">The two teams we are talking about are the <a href="https://www.nhl.com/blues" target="_blank">St. Louis Blues</a> and the <a href="http://blackhawks.nhl.com/" target="_blank">Chicago Blackhawks</a>.Both teams are in the central division in the NHL and both teams have won the <a href="https://en.wikipedia.org/wiki/NHL_Stanley_Cup" target="_blank">Stanly Cup</a> in the last ten years.</p>
 		</h2>
-		<section class="blues">
+		<section class="hockey">
 				<h2><a href="https://www.nhl.com/blues" target="_blank">St. Louis Blues</a></h2>
 				<a href="https://www.nhl.com/blues" target="_blank"><img class="img-blues" src="Blues circle.jpg"></a>
 				<p></p>
@@ -42,9 +42,7 @@
 				<li><a href="https://www.nhl.com/blues/roster" target="_blank">Roster</li>
 				<li><a href="https://www.nhl.com/blues/stats" target="_blank">Stats</li></a>
 			
-		</section>
-
-		<section class="blackhawks">
+		
 				<h2><a href="http://blackhawks.nhl.com/" target="_blank">Chicago Blackhawks</a></h2>
 				<a href="http://blackhawks.nhl.com/" target="_blank"><img class="img-blackhawks" src="Blackhawks circle.jpeg"></a>
 				<p></p>
