--- a/index.html
+++ b/index.html
@@ -37,20 +37,20 @@
 				<a href="https://www.nhl.com/blues" target="_blank"><img class="img-blues" src="Blues circle.jpg"></a>
 				<p></p>
 			
-				<li><a href="https://www.nhl.com/blues/schedule/2021-10-01/CT" target="_blank">2021-2022 Schedule</a></li>
-				<li><a href="https://www.nhl.com/blues/tickets" target="_blank">Tickets</li>
-				<li><a href="https://www.nhl.com/blues/roster" target="_blank">Roster</li>
-				<li><a href="https://www.nhl.com/blues/stats" target="_blank">Stats</li></a>
+				<a href="https://www.nhl.com/blues/schedule/2021-10-01/CT" target="_blank">2021-2022 Schedule</a></li>
+				<a href="https://www.nhl.com/blues/tickets" target="_blank">Tickets</li>
+				<a href="https://www.nhl.com/blues/roster" target="_blank">Roster</li>
+				<a href="https://www.nhl.com/blues/stats" target="_blank">Stats</li></a>
 			
 		
 				<h2><a href="http://blackhawks.nhl.com/" target="_blank">Chicago Blackhawks</a></h2>
 				<a href="http://blackhawks.nhl.com/" target="_blank"><img class="img-blackhawks" src="Blackhawks circle.jpeg"></a>
 				<p></p>
 				
-				<li><a href="https://www.nhl.com/blackhawks/schedule/2021-10-01/CT" target="_blank">2021-2022 Schedule</li>
-				<li><a href="https://www.nhl.com/blackhawks/tickets" target="-blank">Tickets</li>
-				<li><a href="https://www.nhl.com/blackhawks/roster" target="_blank">Roster</li>
-				<li><a href="https://www.nhl.com/blackhawks/stats" target="_blank">Stats</li></a>
+				<a href="https://www.nhl.com/blackhawks/schedule/2021-10-01/CT" target="_blank">2021-2022 Schedule</li>
+				<a href="https://www.nhl.com/blackhawks/tickets" target="-blank">Tickets</li>
+				<a href="https://www.nhl.com/blackhawks/roster" target="_blank">Roster</li>
+				<a href="https://www.nhl.com/blackhawks/stats" target="_blank">Stats</li></a>
 			
 		</section>
 		<footer>
