--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
 		<section class="hockey">
 				<h2><a href="https://www.nhl.com/blues" target="_blank">St. Louis Blues</a></h2>
 				<a href="https://www.nhl.com/blues" target="_blank"><img class="img-blues" src="Blues circle.jpg"></a>
-			<p>
+				
+			<p class="hockey-blues">
 			
 				<a href="https://www.nhl.com/blues/schedule/2021-10-01/CT" target="_blank">2021-2022 Schedule</a><br>
 				<a href="https://www.nhl.com/blues/tickets" target="_blank">Tickets<br>
@@ -46,7 +47,7 @@
 				<h2><a href="http://blackhawks.nhl.com/" target="_blank">Chicago Blackhawks</a></h2>
 				<a href="http://blackhawks.nhl.com/" target="_blank"><img class="img-blackhawks" src="Blackhawks circle.jpeg"></a>
 			
-			<p>	
+			<p class="hockey-hawks">	
 				<a href="https://www.nhl.com/blackhawks/schedule/2021-10-01/CT" target="_blank">2021-2022 Schedule<br>
 				<a href="https://www.nhl.com/blackhawks/tickets" target="-blank">Tickets<br>
 				<a href="https://www.nhl.com/blackhawks/roster" target="_blank">Roster<br>
