--- a/index.html
+++ b/index.html
@@ -33,28 +33,31 @@
 			<p class="nhl">The two teams we are talking about are the <a href="https://www.nhl.com/blues" target="_blank">St. Louis Blues</a> and the <a href="http://blackhawks.nhl.com/" target="_blank">Chicago Blackhawks</a>.Both teams are in the central division in the NHL and both teams have won the <a href="https://en.wikipedia.org/wiki/NHL_Stanley_Cup" target="_blank">Stanly Cup</a> in the last ten years.</p>
 		</h2>
 		<section class="hockey">
-			<p class="hockey-blues">
+
+			<div class="hockey-blues">
 				<h2><a href="https://www.nhl.com/blues" target="_blank">St. Louis Blues</a></h2>
 				<a href="https://www.nhl.com/blues" target="_blank"><img class="img-blues" src="Blues circle.jpg"></a>
 
 			
-			
-				<a href="https://www.nhl.com/blues/schedule/2021-10-01/CT" target="_blank">2021-2022 Schedule</a><br>
-				<a href="https://www.nhl.com/blues/tickets" target="_blank">Tickets<br>
-				<a href="https://www.nhl.com/blues/roster" target="_blank">Roster<br>
-				<a href="https://www.nhl.com/blues/stats" target="_blank">Stats</a><br>
-			</p>
+				<p>
+					<a href="https://www.nhl.com/blues/schedule/2021-10-01/CT" target="_blank">2021-2022 Schedule</a><br>
+					<a href="https://www.nhl.com/blues/tickets" target="_blank">Tickets<br>
+					<a href="https://www.nhl.com/blues/roster" target="_blank">Roster<br>
+					<a href="https://www.nhl.com/blues/stats" target="_blank">Stats</a><br>
+				</p>
+			</div>
 
-			<p class="hockey-hawks">
+			<div class="hockey-hawks">
 			<h2><a href="http://blackhawks.nhl.com/" target="_blank">Chicago Blackhawks</a></h2>
 				<a href="http://blackhawks.nhl.com/" target="_blank"><img class="img-blackhawks" src="Blackhawks circle.jpeg"></a>
 			
-				
-				<a href="https://www.nhl.com/blackhawks/schedule/2021-10-01/CT" target="_blank">2021-2022 Schedule<br>
-				<a href="https://www.nhl.com/blackhawks/tickets" target="-blank">Tickets<br>
-				<a href="https://www.nhl.com/blackhawks/roster" target="_blank">Roster<br>
-				<a href="https://www.nhl.com/blackhawks/stats" target="_blank">Stats<br></a>
-			</p>
+				<p>	
+					<a href="https://www.nhl.com/blackhawks/schedule/2021-10-01/CT" target="_blank">2021-2022 Schedule<br>
+					<a href="https://www.nhl.com/blackhawks/tickets" target="-blank">Tickets<br>
+					<a href="https://www.nhl.com/blackhawks/roster" target="_blank">Roster<br>
+					<a href="https://www.nhl.com/blackhawks/stats" target="_blank">Stats<br></a>
+				</p>
+			</div>	
 		</section>
 		<footer>
 			<p>&copy;2021</p>
