--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 			
 				<p>
 					<a href="https://www.nhl.com/blues/schedule/2021-10-01/CT" target="_blank">2021-2022 Schedule</a><br>
-					<a href="https://www.nhl.com/blues/tickets" target="_blank">Tickets<br>
+					<a href="https://www.nhl.com/blues/tickets" target="_blank" style="color: #000;">Tickets<br>
 					<a href="https://www.nhl.com/blues/roster" target="_blank">Roster<br>
 					<a href="https://www.nhl.com/blues/stats" target="_blank">Stats</a><br>
 				</p>
