--- a/index.html
+++ b/index.html
@@ -35,27 +35,27 @@
 		<section class="hockey">
 
 			<div class="hockey-blues">
-				<h2><a href="https://www.nhl.com/blues" target="_blank">St. Louis Blues</a></h2>
+				<h2><a href="https://www.nhl.com/blues" target="_blank" style="color: #000;">St. Louis Blues</a></h2>
 				<a href="https://www.nhl.com/blues" target="_blank"><img class="img-blues" src="Blues circle.jpg"></a>
 
 			
 				<p>
-					<a href="https://www.nhl.com/blues/schedule/2021-10-01/CT" target="_blank">2021-2022 Schedule</a><br>
+					<a href="https://www.nhl.com/blues/schedule/2021-10-01/CT" target="_blank" style="color: #000;">2021-2022 Schedule</a><br>
 					<a href="https://www.nhl.com/blues/tickets" target="_blank" style="color: #000;">Tickets<br>
-					<a href="https://www.nhl.com/blues/roster" target="_blank">Roster<br>
-					<a href="https://www.nhl.com/blues/stats" target="_blank">Stats</a><br>
+					<a href="https://www.nhl.com/blues/roster" target="_blank" style="color: #000;">Roster<br>
+					<a href="https://www.nhl.com/blues/stats" target="_blank" style="color: #000;">Stats</a><br>
 				</p>
 			</div>
 
 			<div class="hockey-hawks">
-			<h2><a href="http://blackhawks.nhl.com/" target="_blank">Chicago Blackhawks</a></h2>
+			<h2><a href="http://blackhawks.nhl.com/" target="_blank" style="color: #000;">Chicago Blackhawks</a></h2>
 				<a href="http://blackhawks.nhl.com/" target="_blank"><img class="img-blackhawks" src="Blackhawks circle.jpeg"></a>
 			
 				<p>	
-					<a href="https://www.nhl.com/blackhawks/schedule/2021-10-01/CT" target="_blank">2021-2022 Schedule<br>
-					<a href="https://www.nhl.com/blackhawks/tickets" target="-blank">Tickets<br>
-					<a href="https://www.nhl.com/blackhawks/roster" target="_blank">Roster<br>
-					<a href="https://www.nhl.com/blackhawks/stats" target="_blank">Stats<br></a>
+					<a href="https://www.nhl.com/blackhawks/schedule/2021-10-01/CT" target="_blank" style="color: #000;">2021-2022 Schedule<br>
+					<a href="https://www.nhl.com/blackhawks/tickets" target="-blank" style="color: #000;">Tickets<br>
+					<a href="https://www.nhl.com/blackhawks/roster" target="_blank" style="color: #000;">Roster<br>
+					<a href="https://www.nhl.com/blackhawks/stats" target="_blank" style="color: #000;">Stats<br></a>
 				</p>
 			</div>	
 		</section>
