--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				<div class="container">
 					<h1>Nhl Rivalries</h1>
 					<div class="main-item">
-						<div class="item-blue item"><a href="https://www.nhl.com/blues">St. Louis Blues</a> lol</div>
+						<div class="item-blue item"><a href="https://www.nhl.com/blues">St. Louis Blues</a></div>
 						<div class="item-nhl item"><a href="https://www.nhl.com/">NHL</div>
 						<div class="item-blackhawks item"><a href="http://blackhawks.nhl.com/">Chicago Blackhawks</div></a>
 					</div>
