--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				
 
 				<div class="container">
-					<h1>Nhl Rivalries</h1>
+					<a href="https://www.nhl.com/" target="_blank"><img class="img-nhl" src="NHL-Logo.png" alt="NHL Logo"></a>
 					<div class="main-item">
 						<div class="item-blue item"><a href="https://www.nhl.com/blues">St. Louis Blues</a></div>
 						<div class="item-nhl item"><a href="https://www.nhl.com/">NHL</div>
