--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 		<div class="nhl">		
 			
-			<a href="https://www.nhl.com/" target="_blank"><img class="img-nhl" src="NHL-Logo.png" alt="NHL Logo"></a>
+			<a href="https://www.nhl.com/" target="_blank"><img class="img-nhl" src="square-nhl.jpg" alt="NHL Logo"></a>
 
 		</div>	
 		
