--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			
 			<h1>
 
-				
+				<a href="https://www.nhl.com/" target="_blank"><img class="img-nhl" src="NHL-Logo.png" alt="NHL Logo"></a>
 
 				<div class="container">
 					<a href="https://www.nhl.com/" target="_blank"><img class="img-nhl" src="NHL-Logo.png" alt="NHL Logo"></a>
