--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 				<div class="container">
 					<a href="https://www.nhl.com/" target="_blank"><img class="img-nhl" src="nhl-logo-3.png" alt="NHL Logo"></a>
 					<div class="main-item">
-						<div class="item-blue item"><a href="https://www.nhl.com/blues" style="color: #000">St. Louis Blues</a></div>
-						<div class="item-nhl item"><a href="https://www.nhl.com/">NHL</div>
-						<div class="item-blackhawks item"><a href="http://blackhawks.nhl.com/">Chicago Blackhawks</div></a>
+						<div class="item-blue item"><a href="https://www.nhl.com/blues" style="color: #fff">St. Louis Blues</a></div>
+						<div class="item-nhl item"><a href="https://www.nhl.com/" style="color: #fff">NHL</div>
+						<div class="item-blackhawks item"><a href="http://blackhawks.nhl.com/" style="color: #fff">Chicago Blackhawks</div></a>
 					</div>
 				</div>
 			</h1>
