--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<header>
 				
 			<h1>
-			<p class="nhl">The two teams we are talking about are the <a href="https://www.nhl.com/blues" target="_blank">St. Louis Blues</a> and the <a href="http://blackhawks.nhl.com/" target="_blank">Chicago Blackhawks</a>.
+			<p class="nhl">The two teams we are talking about are the <a href="https://www.nhl.com/blues" target="_blank" style="color: #000;">St. Louis Blues</a> and the <a href="http://blackhawks.nhl.com/" target="_blank" style="color: #000;">Chicago Blackhawks</a>.
 		</h1>	
 
 			<h1>
