--- a/index.html
+++ b/index.html
@@ -36,9 +36,7 @@
 		</header>
 
 	
-		<h1>
-			<p class="nhl">The two teams we are talking about are the <a href="https://www.nhl.com/blues" target="_blank">St. Louis Blues</a> and the <a href="http://blackhawks.nhl.com/" target="_blank">Chicago Blackhawks</a>.Both teams are in the central division in the NHL and both teams have won the <a href="https://en.wikipedia.org/wiki/NHL_Stanley_Cup" target="_blank">Stanly Cup</a> in the last ten years.</p>
-		</h1>
+		
 		<section class="hockey">
 
 			<div class="hockey-blues">
@@ -53,7 +51,7 @@
 					<a href="https://www.nhl.com/blues/stats" target="_blank" style="color: #000;">Stats</a><br>
 				</p>
 				<p>
-					asdfghjhgdhkkfghvkghbsiksdfhi urbvhehgdgkhrvhdfhi hguisufd oghf sroiyegserohg igzdnhflghvdhghvf fbklhghdslkghfd hsdlfkdg hsfdlrsuiyyyye  
+					The St. Louis Blues had there inagrul season in 1967 along with the Los Angeles Kings, Minnesota North Stars The now Dallas Stars, Okland Seals, Philadelphia Flyers, and Pittsburgh Penguins. The Blues are in the Central Division and Western Conference. The blues won the Stanly Cup Playoffs in 2019 after being in last place in the league on January 2nd 2019, shortly before that they fired there head coach Mike Yeo and hired there interim coach Craig Berube. One thing to note about the culture of hockey is that everyone is very superstious so on the night of January 6th 2019 a few blues players were in a bar when Gloria by Laura Branigan came on and everyone was dancing to it so at that moment they said that they should play that after our wins, so the folowing day rookie goaltender Jordan Binigton started and he got a shutout so after that night they slowly got better and ended up getting the thirdspot in the Central Dicision and winning The Stanly Cup.
 				</p>
 			</div>
 
