--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 					<a href="https://www.nhl.com/" target="_blank"><img class="img-nhl" src="nhl-logo-3.png" alt="NHL Logo"></a>
 					<div class="main-item">
 						<div><a class="item-blue item" href="https://www.nhl.com/blues" style="color: #fff">St. Louis Blues</a></div>
-						<div><a class="item-nhl item" href="https://www.nhl.com/" style="color: #fff">NHL</div>
+						<div><a class="item-nhl item" href="https://www.nhl.com/" style="color: #fff">NHL</div></a>
 						<div class="item-blackhawks item"><a class="item-blackhawks item" href="http://blackhawks.nhl.com/" style="color: #fff">Chicago Blackhawks</div></a>
 					</div>
 				</div>
