--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
 				
 
 				<div class="container">
-					<a class="img-nhl" href="https://www.nhl.com/" target="_blank"><img  src="nhl-logo-3.png" alt="NHL Logo"></a>
+					<div class="img-nhl">
+						<a  href="https://www.nhl.com/" target="_blank"><img src="nhl-logo-3.png" alt="NHL Logo"></a>
+					</div>
+
 					<div class="main-item">
 						<div><a class="item-blue item" href="https://www.nhl.com/blues" style="color: #fff">St. Louis Blues</a></div>
 						<div><a class="item-nhl item" href="https://www.nhl.com/" style="color: #fff">NHL</div></a>
