--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
 					
 
 					<div class="main-item">
-						<div><a class="item-blue item" href="https://www.nhl.com/blues" style="color: #fff">St. Louis<br> Blues</a></div>
+						<div><a class="item-blue item" href="https://www.nhl.com/blues" style="color: #fff">St. Louis Blues</a></div>
 						<div><a class="item-nhl item" href="https://www.nhl.com/" style="color: #fff">NHL</div></a>
-						<div><a class="item-blackhawks item" href="http://blackhawks.nhl.com/" style="color: #fff">Chicago<br> Blackhawks</div></a>
+						<div><a class="item-blackhawks item" href="http://blackhawks.nhl.com/" style="color: #fff">Chicago Blackhawks</div></a>
 					</div>
 				</div>
 			</h1>
