--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 					
 
 					<div class="main-item">
-						<div class="item-blue item"><a href="https://www.nhl.com/blues" style="color: #fff">St. Louis Blues</a></div>
+						<a class="item-blue item" href="https://www.nhl.com/blues" style="color: #fff">St. Louis Blues</a>
 						<div class="item-nhl item"><a href="https://www.nhl.com/" style="color: #fff">NHL</div></a>
 						<div class="item-blackhawks item"><a href="http://blackhawks.nhl.com/" style="color: #fff">Chicago Blackhawks</div></a>
 					</div>
