--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 
 					<div class="main-item">
 						<a class="item-blue item" href="https://www.nhl.com/blues" style="color: #fff">St. Louis Blues</a>
-						<div class="item-nhl item"><a href="https://www.nhl.com/" style="color: #fff">NHL</div></a>
-						<div class="item-blackhawks item"><a href="http://blackhawks.nhl.com/" style="color: #fff">Chicago Blackhawks</div></a>
+						<a class="item-nhl item" href="https://www.nhl.com/" style="color: #fff">NHL</a>
+						<a  class="item-blackhawks item"href="http://blackhawks.nhl.com/" style="color: #fff">Chicago Blackhawks</a>
 					</div>
 				</div>
 			</h1>
