--- a/index.html
+++ b/index.html
@@ -36,9 +36,10 @@
 				</div>
 			</h1>
 		</header>
-		<h3>A little about me</h3>
-		<p>Hello my name is Kaleb and I have lived in between St. louis and Chicago my whole life, I also played hockey when I was younger. When I was younger I was more of a Blackhawks fan because where I lived and some of my family mebers were as well. As I grew up me and my family would take vactaions down to St. Louis and one time we got tickets to go see a Blues game, I fell in love with the team again. I forgot to mention when I turned five for my birthday me, my dad, my uncle, and my grandpas all went to a blues game and for one of my gifts I got a custom jersey with my name. So I guess I've always been a Blues fan but I do love the rivalry between the Blues and the Blackhawks.</p>
-
+			<div class="bio">
+				<h2>A little about me</h2>
+				<p>Hello my name is Kaleb and I have lived in between St. louis and Chicago my whole life, I also played hockey when I was younger. When I was younger I was more of a Blackhawks fan because where I lived and some of my family mebers were as well. As I grew up me and my family would take vactaions down to St. Louis and one time we got tickets to go see a Blues game, I fell in love with the team again. I forgot to mention when I turned five for my birthday me, my dad, my uncle, and my grandpas all went to a blues game and for one of my gifts I got a custom jersey with my name. So I guess I've always been a Blues fan but I do love the rivalry between the Blues and the Blackhawks.</p>
+			</div>		
 	
 		
 		<section class="hockey">
