--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 				
 
 				<div class="container">
-						<a  href="https://www.nhl.com/" target="_blank"><img class="img-nhl" src="nhl-logo-3.png" alt="NHL Logo"></a>
+						<a  href="https://www.nhl.com/" target="_blank"><img class="img-nhl" src="NHL-Logo.png" alt="NHL Logo"></a>
 					
 
 					<div class="main-item">
