--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<header>
 				
 			<h1>
-			<p class="nhl">Every sport has rivalries and the NHL is no diffrent the two teams I'll be talking about are the <a href="https://www.nhl.com/blues" target="_blank" style="color: #000;">St. Louis Blues</a> and the <a href="http://blackhawks.nhl.com/" target="_blank" style="color: #000;">Chicago Blackhawks</a>.
+			<p class="nhl">Every sport has rivalries and the NHL is no different the two teams I'll be talking about are the <a href="https://www.nhl.com/blues" target="_blank" style="color: #000;">St. Louis Blues</a> and the <a href="http://blackhawks.nhl.com/" target="_blank" style="color: #000;">Chicago Blackhawks</a>.
 		</h1>	
 
 			<h1>
@@ -38,7 +38,7 @@
 		</header>
 			<div class="bio">
 				<h2>A little about me</h2>
-				<p>Hello my name is Kaleb and I have lived in between St. louis and Chicago my whole life, I also played hockey when I was younger. When I was younger I was more of a Blackhawks fan because where I lived and some of my family mebers were as well. As I grew up me and my family would take vactaions down to St. Louis and one time we got tickets to go see a Blues game, I fell in love with the team again. I forgot to mention when I turned five for my birthday me, my dad, my uncle, and my grandpas all went to a blues game and for one of my gifts I got a custom jersey with my name. So I guess I've always been a Blues fan but I do love the rivalry between the Blues and the Blackhawks.</p>
+				<p>Hello my name is Kaleb and I have lived in between St. Louis and Chicago my whole life, I also played hockey when I was younger. When I was younger I was more of a Blackhawks fan because where I lived and some of my family members were as well. As I grew up me and my family would take vacations down to St. Louis and one time we got tickets to go see a Blues game, I fell in love with the team again. I forgot to mention when I turned five for my birthday me, my dad, my uncle, and my grandpas all went to a blues game and for one of my gifts I got a custom jersey with my name. So I guess I've always been a Blues fan but I do love the rivalry between the Blues and the Blackhawks.</p>
 			</div>		
 	
 		
@@ -57,7 +57,7 @@
 				</p>
 				<p class="blues-article">
 					<h3>	
-						The St. Louis Blues had there inagrul season in 1967 along with the Los Angeles Kings, Minnesota North Stars The now Dallas Stars, Okland Seals, Philadelphia Flyers, and Pittsburgh Penguins. The Blues are in the Central Division and Western Conference. The blues won the Stanly Cup Playoffs in 2019 after being in last place in the league on January 2nd 2019, shortly before that they fired there head coach Mike Yeo and hired there interim coach Craig Berube. One thing to note about the culture of hockey is that everyone is very superstious so on the night of January 6th 2019 a few blues players were in a bar when Gloria by Laura Branigan came on and everyone was dancing to it so at that moment they said that they should play that after our wins, so the folowing day rookie goaltender Jordan Binigton started and he got a shutout so after that night they slowly got better and ended up getting the thirdspot in the Central Dicision and winning The Stanly Cup.
+						The St. Louis Blues had there inaugural season in 1967 along with the Los Angeles Kings, Minnesota North Stars The now Dallas Stars, Oakland Seals, Philadelphia Flyers, and Pittsburgh Penguins. The Blues are in the Central Division and Western Conference. The blues won the Stanly Cup Playoffs in 2019 after being in last place in the league on January 2nd 2019, shortly before that they fired there head coach Mike Yeo and hired there interim coach Craig Berube. One thing to note about the culture of hockey is that everyone is very superstitious so on the night of January 6th 2019 a few blues players were in a bar when Gloria by Laura Branigan came on and everyone was dancing to it so at that moment they said that they should play that after our wins, so the following day rookie goaltender Jordan Binigton started and he got a shutout so after that night they slowly got better and ended up getting the third spot in the Central Division and winning The Stanly Cup.
 					</h3>	
 				</p>
 			</div>
@@ -72,6 +72,7 @@
 					<a href="https://www.nhl.com/blackhawks/roster" target="_blank" style="color: #000;">Roster<br>
 					<a href="https://www.nhl.com/blackhawks/stats" target="_blank" style="color: #000;">Stats<br></a>
 				</p>
+				<p>The Chicago Blackhawks were apart of the original six teams to start the National Hockey League in 1926 along with the Detroit Red Wings, Montreal Canadians, Toronto Maple Leafs, Boston Bruins, and the New York Rangers. The Chicago Blackhawks were the first team in the NHL to habe a horn sound off after a home goal Bill Wirtz donated his yacht's horn to the Chicago stadium it became very popular after the 1973 Stanly cup finals against the Montreal Canadians. The Blackhawks have won six time they've won it in 1934, 1938, 1961, 2010, 2013, and 2015. The team name an organization has had some conflict within the last couple of years regarding the logo On July 7, 2020, the Blackhawks issued a press release to defend their team's name and logo. The team stated, "The Chicago Blackhawks name and logo symbolizes an important and historic person, Black Hawk of Illinois' Sac & Fox Nation, whose leadership and life has inspired generations of Native Americans, veterans and the public." </p>
 			</div>	
 		</section>
 		<footer>
