--- a/index.html
+++ b/index.html
@@ -72,7 +72,11 @@
 					<a href="https://www.nhl.com/blackhawks/roster" target="_blank" style="color: #000;">Roster<br>
 					<a href="https://www.nhl.com/blackhawks/stats" target="_blank" style="color: #000;">Stats<br></a>
 				</p>
-				<p class="hawks-article">The Chicago Blackhawks were apart of the original six teams to start the National Hockey League in 1926 along with the Detroit Red Wings, Montreal Canadians, Toronto Maple Leafs, Boston Bruins, and the New York Rangers. The Chicago Blackhawks were the first team in the NHL to habe a horn sound off after a home goal Bill Wirtz donated his yacht's horn to the Chicago stadium it became very popular after the 1973 Stanly cup finals against the Montreal Canadians. The Blackhawks have won six time they've won it in 1934, 1938, 1961, 2010, 2013, and 2015. The team name an organization has had some conflict within the last couple of years regarding the logo On July 7, 2020, the Blackhawks issued a press release to defend their team's name and logo. The team stated, "The Chicago Blackhawks name and logo symbolizes an important and historic person, Black Hawk of Illinois' Sac & Fox Nation, whose leadership and life has inspired generations of Native Americans, veterans and the public." </p>
+				<p class="hawks-article">
+					<h3>	
+						The Chicago Blackhawks were apart of the original six teams to start the National Hockey League in 1926 along with the Detroit Red Wings, Montreal Canadians, Toronto Maple Leafs, Boston Bruins, and the New York Rangers. The Chicago Blackhawks were the first team in the NHL to habe a horn sound off after a home goal Bill Wirtz donated his yacht's horn to the Chicago stadium it became very popular after the 1973 Stanly cup finals against the Montreal Canadians. The Blackhawks have won six time they've won it in 1934, 1938, 1961, 2010, 2013, and 2015. The team name an organization has had some conflict within the last couple of years regarding the logo On July 7, 2020, the Blackhawks issued a press release to defend their team's name and logo. The team stated, "The Chicago Blackhawks name and logo symbolizes an important and historic person, Black Hawk of Illinois' Sac & Fox Nation, whose leadership and life has inspired generations of Native Americans, veterans and the public."
+					</h3>	 
+				</p>
 			</div>	
 		</section>
 		<footer>
