--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 				<a href="https://www.nhl.com/blues" target="_blank"><img class="img-blues" src="Blues circle.jpg"></a>
 
 			
-				<p>
+				<p class="blues-link">
 					<a href="https://www.nhl.com/blues/schedule/2021-10-01/CT" target="_blank" style="color: #000;">2021-2022 Schedule</a><br>
 					<a href="https://www.nhl.com/blues/tickets" target="_blank" style="color: #000;">Tickets<br>
 					<a href="https://www.nhl.com/blues/roster" target="_blank" style="color: #000;">Roster<br>
