--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
 				<p>
 					<h3>
-						the rivalries
+						the rivalries ugfiueucdiriegtrb 8hgehg whwiu  ihurh roiuhiuwr eiurht h whrehgi oirh thh tgrwihoi  rthwoiuh i iwr 
 					</h3>
 				</p>
 
