--- a/index.html
+++ b/index.html
@@ -78,13 +78,14 @@
 					</h3>	 
 				</p>
 
+			</div>
+
 				<p>
 					<h3>
-						the rivalries ugfiueucdiriegtrb 8hgehg whwiu  ihurh roiuhiuwr eiurht h whrehgi oirh thh tgrwihoi  rthwoiuh i iwr 
+					sdfghjkjcujhn coih di isdfhdf dfshskvf dshfk hkjh djsjsjs dsj 	
 					</h3>
 				</p>
 
-			</div>	
 		</section>
 		<footer>
 			<p>&copy;2021</p>
