--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
 			</div>
 			<div class="rivalry">
-				<img src="HNL-fight">
+				<img src="HNL-fight.jpg">
 				<p>
 					<h1 class="h1-rival">The Rivalry</h1>
 					<h3>
