--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 				
 
 				<div class="container">
+					<img src="blues vs hawks.jpg">
 						<a  href="https://www.nhl.com/" target="_blank"><img class="img-nhl" src="NHL-Logo.png" alt="NHL Logo"></a>
 					
 
