--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
 			</div>
 			<div class="rivalry">
-				<img src="NHL-fight.jpg">
+				<img class="fight" src="NHL-fight.jpg">
 				<p>
 					<h1 class="h1-rival">The Rivalry</h1>
 					<h3>
