--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 				
 
 				<div class="container">
-					<img src="blues vs hawks.jpg">
+					<div class="blues vs hawks"></div>
 						<a  href="https://www.nhl.com/" target="_blank"><img class="img-nhl" src="NHL-Logo.png" alt="NHL Logo"></a>
 					
 
@@ -93,7 +93,7 @@
 		<footer>
 			<p>&copy;2021</p>
 		</footer>
-		<script src="app.js"></script>
-	</body>
+		
+
 	
 </html>
