--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 			</div>	
 		</section>
 		<footer>
-			<p>&copy;2021 Kaleb Trone Contact me at <a href="k.trone@gmail.com" target="_blank"></a></p>
+			<p>&copy;2021 Kaleb Trone Contact me at <a href="k.trone@gmail.com" target="_blank">k.trone@gmail.com</a></p>
 		</footer>
 		
 
