--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<header>
 				
 			<h1>
-			<p class="nhl">Every sport has rivalries and the NHL is no different the two teams I'll be talking about are the <a href="https://www.nhl.com/blues" target="_blank" style="color: #000;">St. Louis Blues</a> and the <a href="http://blackhawks.nhl.com/" target="_blank" style="color: #000;">Chicago Blackhawks</a>.
+			<p class="nhl">Every sport has rivalries and the NHL is no different. The rivalry I'll be talking about is the rivalry between the <a href="https://www.nhl.com/blues" target="_blank" style="color: #000;">St. Louis Blues</a> and the <a href="http://blackhawks.nhl.com/" target="_blank" style="color: #000;">Chicago Blackhawks</a>.
 		</h1>	
 
 			<h1>
@@ -94,7 +94,7 @@
 			</div>	
 		</section>
 		<footer>
-			<p>&copy;2021 Kaleb Trone Contact me at <a href="k.trone@gmail.com" target="_blank">k.trone@gmail.com</a></p>
+			<p>&copy;2021 Kaleb Trone Contact me at <a href="mailto:k.trone@gmail.com" target="_blank">k.trone@gmail.com</a></p>
 		</footer>
 		
 
